--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {},
     "autoload": {
         "files": [
+            "app/Helpers/Helpers.php"
         ],
         "psr-4": {
             "App\\": "app/"
